fix: hide overflow in progress bar
Progress calculated by `dmloader.js` can be greater than 100%, as
described in https://github.com/defold/defold/issues/8074.

--- a/assets/web/dark_theme.css
+++ b/assets/web/dark_theme.css
@@ -1,5 +1,6 @@
 	.canvas-app-progress {
 		background-color: #262b44;
+		overflow: hidden;
 		padding: 10px;
 		position: absolute;
 		bottom: 7.5%;
